syntax = "proto3";

package GrpcApiPractice;

message ServiceStatus
{
    bool is_success      = 1;
    string error_message = 2;
}